# olmon

./: .gitignore  CHANGELOG.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflow/: release.yaml
.github/workflows/: ci.yaml  release.yaml
olmon/: __main__.py  client.py  config.py  display.py  main.py
olmon/commands/: compare.py  init.py  models.py  ps.py  status.py  top.py  uninstall.py  update.py  watch.py
scripts/: build_binaries.sh  install.sh  uninstall.sh
