[project]
name = "olmon"
version = "0.1.0"
description = "A lightweight CLI to monitor Ollama models and usage"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Vlad Digori", email = "digorivlad59@gmail.com" }
]
keywords = ["ollama", "monitor", "cli", "llm", "devops", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mypy>=2.1.0",
    "platformdirs>=4.10.0",
    "rich>=15.0.0",
]

[project.scripts]
olmon = "olmon.main:app"

[project.urls]
Homepage = "https://github.com/glemiu6/olmon"
Repository = "https://github.com/glemiu6/olmon"
"Bug Tracker" = "https://github.com/glemiu6/olmon/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "build>=1.4.4",
    "twine>=6.2.0",
    "pyinstaller>=6.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
